--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "bootstrap": "^4.4.1",
     "loom-js": "1.70.0",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-toastify": "^6.0.0-rc.2-1",
     "typescript": "~3.7.2",
     "web3": "1.2.1"
   },
